--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "dependencies": {
     "crypto-js": "^3.1.9-1",
     "level": "^4.0.0"
+  },
+  "scripts": {
+     "start": "node simpleChain.js"
   }
 }
